2004-11-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (toBoolean): fixed bug 1065458
	* device/lib/Makefile.in: z80 uses printf_large.c, sprintf.c and
	  vprintf.c now
	* device/lib/printf_large.c (calculate_digit): fixed bug 1057979
	* device/lib/z80/Makefile: don't use printf.c as it fails bug 1057979
	  WARNING: remove device/lib/build/z80/printf.o by hand when
	  updating from previous build!
	* device/lib/z80/printf.c: updated comment
	* support/regression/tests/bug1057979.c: test all ports now
	* support/regression/tests/bug1065458.c: file added

2004-11-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/gen.c (genFunction, genEndFunction): avoided generating
	  *_start and *_end symbols for static functions

2004-11-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (linkEdit): don't suppress crt0 if --nostdlib is used
	  and search crt0.o in all library paths,
	  (setIncludePath): proper handling of --nostdinc,
	  (setLibPath): proper handling of --nostdlib
	* support/regression/Makefile,
	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/gbz80/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/mcs51/spec.mk,
	* support/regression/ports/mcs51-large/spec.mk,
	* support/regression/ports/mcs51-stack-auto/spec.mk,
	* support/regression/ports/z80/spec.mk: use include and lib files from
	  built version of sdcc instead of installed version
	* doc/sdccman.lyx: fixed typo in --nostdinc

2004-11-10 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/pcode.c,
	* src/pic/device.c,
	* src/pic/ralloc.c,
	* src/pic/gen.c : added support to generate code for struct bit fields.

2004-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/xa51/xa_version.h,
	* device/include/errno.h,
	* device/include/regc515c.h,
	* device/lib/_itoa.c,
	* device/lib/_ltoa.c,
	* device/lib/ser_ir_cts_rts.c,
	* sim/ucsim/xa.src/glob.cc,
	* sim/ucsim/xa.src/inst_gen.cc,